--- a/中文文档.md
+++ b/中文文档.md
@@ -89,7 +89,7 @@ Program ended with exit code: 0
 * 执行 `swift build`命令
 * 项目编译成功后, 请执行 `./.build/debug/Perfect-FileHandling`
 
-您将看到输出如上.
+您将看到输出同上.
 
 ## 问题
 
